--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -172,8 +172,14 @@ main .top-section .bottom-searcher form input {
   padding-left: 11px;
   color: #8b8b8b;
 }
+@media (max-width: 773px) {
+  main .top-section .bottom-searcher form input {
+    font-size: 10px;
+  }
+}
 main .header-group {
   width: 100%;
+  text-align: center;
 }
 main .header-group h2 {
   font-size: 20px;
@@ -186,11 +192,6 @@ main .header-group h4 {
   font-size: 14px;
   color: #8b8b8b;
 }
-main .image {
-  overflow: hidden;
-  height: 300px;
-  position: relative;
-}
 main .image p {
   text-transform: uppercase;
   color: #333;
@@ -198,9 +199,14 @@ main .image p {
   padding: 10px 0;
   margin: -1px;
 }
-main .image img {
-  width: 90%;
-  height: 75%;
+main .image figure {
+  overflow: hidden;
+  height: 300px;
+  position: relative;
+}
+main .image figure img {
+  width: 100%;
+  height: 100%;
   top: -9999px;
   right: -9999px;
   left: -9999px;
@@ -329,5 +335,77 @@ main .central-section .big-button a {
   padding: 15px 70px;
   color: #f5f5f6;
   font-size: 18px;
+}
+main .articles-section {
+  margin-top: 30px;
+}
+main .articles-section .article {
+  margin-bottom: 10px;
+}
+main .articles-section .article figure {
+  overflow: hidden;
+  position: relative;
+  height: 200px;
+  margin: 0;
+}
+main .articles-section .article figure img {
+  height: 100%;
+  width: 100%;
+  top: -9999px;
+  right: -9999px;
+  left: -9999px;
+  bottom: -9999px;
+  position: absolute;
+  margin: auto;
+}
+main .articles-section .description {
+  font-family: serif;
+  border-right: 1px solid #e2e2e2;
+  border-left: 1px solid #e2e2e2;
+  border-bottom: 2px solid #2c31d4;
+}
+main .articles-section .description h4 {
+  text-align: center;
+  text-transform: capitalize;
+  font-size: 17px;
+  font-weight: 600;
+  padding: 15px 0px 5px;
+  color: #444;
+}
+main .articles-section .description .desc {
+  color: #8b8b8b;
+  height: 90px;
+  overflow: hidden;
+  padding: 10px 20px;
+  font-size: 14px;
+}
+main .articles-section .description .date {
+  padding: 5px 20px;
+  color: #9ca1a0;
+  font-family: serif;
+  font-style: italic;
+}
+main .sponsors {
+  margin: 40px 0;
+}
+footer {
+  background-color: #110817;
+}
+footer .top-footer {
+  border-bottom: 1px solid #8b8b8b;
+}
+footer .top-footer .footer-menu li {
+  padding: 20px 0;
+}
+footer .top-footer .footer-menu li a {
+  color: #ccc;
+  font-size: 13px;
+}
+footer .top-footer .footer-menu i {
+  color: #ecc275;
+}
+footer .footer-logos img {
+  float: right;
+  padding: 10px 0;
 }
 /*# sourceMappingURL=style.css.map */
