--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -201,7 +201,7 @@ main .image p {
 }
 main .image figure {
   overflow: hidden;
-  height: 300px;
+  height: 222px;
   position: relative;
 }
 main .image figure img {
@@ -272,8 +272,15 @@ main .central-section figure .actions .act-list .act-item:last-child {
   border-left: 1px solid #a7a7a7;
 }
 main .central-section .box-item {
-  width: 20%;
+  width: 222px;
   padding: 0  12px;
+  margin-bottom: 15px;
+  /*            @media(max-width:991p) and (min-width:768px) {
+                            width:25%;
+                        }
+                        @media(max-width:767px) {
+                            width:30%;
+                        }*/
 }
 main .central-section .box-item .name {
   margin: 0;
@@ -335,6 +342,11 @@ main .central-section .big-button a {
   padding: 15px 70px;
   color: #f5f5f6;
   font-size: 18px;
+}
+@media (max-width: 362px) {
+  main .central-section .big-button a {
+    padding: 15px 16px;
+  }
 }
 main .articles-section {
   margin-top: 30px;
