--- a/public_html/assets/less/style.less
+++ b/public_html/assets/less/style.less
@@ -214,7 +214,7 @@ main {
         }
         figure {
             overflow: hidden;
-            height: 300px;
+            height: 222px;
             position: relative;
             img {
                 width: 100%;
@@ -295,8 +295,16 @@ main {
 
         }
         .box-item {
-            width:20%;
+            width:222px;
             padding:0  12px;
+            margin-bottom: 15px;
+            /*            @media(max-width:991p) and (min-width:768px) {
+                            width:25%;
+                        }
+                        @media(max-width:767px) {
+                            width:30%;
+                        }*/
+
             .name {
                 margin: 0;
                 background-color: @bgboxcolor;
@@ -360,6 +368,10 @@ main {
                 padding: 15px 70px;
                 color:#f5f5f6;
                 font-size: 18px;
+                @media(max-width:362px) {
+
+                    padding: 15px 16px;
+                }
             }
         }
 
